--- a/styles.css
+++ b/styles.css
@@ -1,244 +1,62 @@
-/* Base Styles */
+/* Declaration of CSS Variables */
+
 :root {
-    --main-bg-color: #444;
-    --main-text-color: #fff;
-    --card-bg-color: #fff;
-    --card-border-color: #ddd;
-    --card-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    --transition-time: 0.3s;
+  --rich-black-fogra-29: #01161eff;
+  --midnight-green-eagle-green: #124559ff;
+  --teal-blue: rgb(255, 255, 255);
+  --cambridge-blue: rgb(85, 136, 90);
+  --beige: rgb(87, 111, 35);
 }
 
-/* Custom Styles */
-.animate-box {
-    width: 100px;
-    height: 100px;
-    background: #444;
-    animation: move 3s infinite alternate;
+/* Element Styles */
+body {
+  color: black;
+  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+/* Navbar Styles */
+.navbar-bg { 
+  background-color: var(--teal-blue);
 }
 
-@keyframes move {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(200px); }
+.navbar-expand-lg .navbar-nav .nav-link {
+  color: var(--beige);
 }
 
-.transition-box {
-    width: 100px;
-    height: 100px;
-    background: #444;
-    transition: transform var(--transition-time), background var(--transition-time);
+/* Hero Area Styles */
+.jumbotron {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  /* background-color: #56738f; */
+  border-radius: 0.3rem;
+  color:black;
 }
 
-.transition-box:hover {
-    transform: rotate(45deg);
-    background: #666;
+/* Button styles */
+.btn {
+  background-color: var(--midnight-green-eagle-green);
 }
 
-.pseudo-element-box {
-    position: relative;
-    background: #444;
-    color: white;
-    padding: 2em;
-    text-align: center;
-    margin: 2em auto;
-    cursor: pointer;
+/* Weather Forecast Card Styles */
+.forecast-cards-bg {
+  background-color: var(--teal-blue);
 }
 
-.pseudo-element-box::after {
-    content: " (You hovered over me!)";
-    color: #ff6347;
-    opacity: 0;
-    transition: opacity var(--transition-time);
+.forecast-card {
+  width: 12rem;
 }
 
-.pseudo-element-box:hover::after {
-    opacity: 1;
+/* Weather Icon sizes */
+
+.weather-icon {
+  width: 100px;
+  height: 100px;
 }
 
-.variable-box {
-    background: var(--main-bg-color);
-    color: var(--main-text-color);
-    padding: 2em;
-    text-align: center;
-    margin: 2em auto;
-    border-radius: 5px;
-}
+/* Media Query */
 
-.media-query-box {
-    background: #444;
-    color: white;
-    padding: 2em;
-    text-align: center;
-    margin: 2em auto;
-    transition: background var(--transition-time);
-}
-
-@media (max-width: 600px) {
-    .media-query-box {
-        background: #ff6347;
-    }
-}
-
-/* Toggle Styles */
-.toggle-box {
-    background: #444;
-    color: white;
-    padding: 2em;
-    text-align: center;
-    border-radius: 5px;
-    margin: 2em auto;
-    transition: background var(--transition-time);
-}
-
-.toggle-box.active {
-    background: #ff6347;
-}
-
-/* Content Change */
-.content-box {
-    background: #444;
-    color: white;
-    padding: 2em;
-    text-align: center;
-    border-radius: 5px;
-    margin: 2em auto;
-    transition: background var(--transition-time);
-}
-
-/* Modal Styles */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
+@media screen and (max-width: 576px) {
+  .forecast-card {
     width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 60px;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
-    border-radius: 5px;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* Dropdown Menu */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    border-radius: 5px;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    border-bottom: 1px solid #ddd;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Counter */
-.counter-box {
-    background: #444;
-    color: white;
-    padding: 2em;
-    text-align: center;
-    border-radius: 5px;
-    margin: 2em auto;
-    font-size: 2em;
-}
-
-/* Form Validation */
-.sample-form {
-    margin-top: 2em;
-}
-
-.sample-form label {
-    display: inline-block;
-    width: 100px;
-    margin-bottom: 0.5em;
-}
-
-.sample-form input {
-    padding: 0.5em;
-    margin-bottom: 1em;
-}
-
-.sample-form button {
-    padding: 0.5em 1em;
-}
-
-.form-message {
-    margin-top: 1em;
-    color: red;
-}
-
-/* Live Search Filter */
-#searchInput {
-    padding: 0.5em;
-    margin-bottom: 1em;
-    width: calc(100% - 1em);
-}
-
-#searchList {
-    list-style: none;
-    padding: 0;
-}
-
-#searchList li {
-    padding: 0.5em;
-    background: #f9f9f9;
-    margin-bottom: 0.5em;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-/* Color Picker */
-.color-box {
-    width: 100px;
-    height: 100px;
-    background: #444;
-    margin: 2em auto;
-    text-align: center;
-    line-height: 100px;
-    color: white;
-    border-radius: 5px;
-    transition: background var(--transition-time);
-}
-
-.list-group{
-    height: 50vh;
-    overflow: scroll;
+  }
 }
